# novoice

./: Cargo.toml  TODO.md  docker-compose.yml
apps/api/: Cargo.toml
apps/api/src/: lib.rs  main.rs
apps/api/src/core/: audit.rs  broadcast.rs  crypto.rs  error.rs  extractor.rs  guards.rs  health.rs  mod.rs  presence.rs  response.rs  router.rs  rtc.rs  sessions.rs  start.rs  state.rs  statements.rs  workers.rs
apps/api/src/core/cache/: friends.rs  guild_members.rs  mod.rs
apps/api/src/core/mappers/: channels.rs  enums.rs  mod.rs  roles.rs  users.rs
apps/api/src/features/: mod.rs
apps/api/src/features/auth/: controller.rs  mod.rs
apps/api/src/features/auth/services/: login.rs  logout.rs  mod.rs  register.rs  ticket.rs
apps/api/src/features/category/: controller.rs  mod.rs
apps/api/src/features/category/services/: create.rs  delete.rs  update.rs
apps/api/src/features/channel/: controller.rs  mod.rs
apps/api/src/features/channel/services/: create.rs  delete.rs  update.rs
apps/api/src/features/dms/: controller.rs  mod.rs
apps/api/src/features/dms/services/: create.rs  get.rs
apps/api/src/features/guild/: controller.rs  mod.rs
apps/api/src/features/guild/services/: create.rs  create_invite.rs  delete.rs  mod.rs
apps/api/src/features/guild_member/: controller.rs  mod.rs
apps/api/src/features/guild_member/services/: ban.rs  kick.rs  leave.rs  mod.rs  unban.rs
apps/api/src/features/messages/: controller.rs  mod.rs
apps/api/src/features/messages/services/: delete.rs  edit.rs  get.rs  mod.rs  pin.rs  send.rs
apps/api/src/features/relationship/: controller.rs  mod.rs
apps/api/src/features/relationship/services/: accept.rs  block.rs  mod.rs  remove.rs  send.rs  unblock.rs
apps/api/src/features/user/: controller.rs  mod.rs
apps/api/src/features/user/services/: get.rs  join_guild.rs  mod.rs
apps/api/src/features/ws/: handler.rs  listener.rs  mod.rs
apps/api/src/features/ws/services/: identity.rs
apps/client/: biome.jsonc  components.json  index.html  package.json  pnpm-lock.yaml  repomix-output.xml  vite.config.ts
apps/client/src/: App.tsx  globals.css  main.tsx
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/src/: error.rs  lib.rs  state.rs  ws.rs
apps/client/src-tauri/src/commands/: auth.rs  call.rs  chat.rs  mod.rs  settings.rs  workspace.rs
apps/client/src-tauri/src/core/: image_cropper.rs  loader.rs  mod.rs
apps/client/src-tauri/src/core/state/: auth.rs  call.rs  entity.rs  mod.rs  network.rs  workspace.rs
apps/client/src-tauri/src/data/: image.rs
apps/client/src/components/: CommandPalette.tsx  FloatingCallManager.tsx  color-picker.tsx  command-palette.tsx  floating-call-manager.tsx  image-croper.tsx  image-cropper.tsx  theme-provider.tsx  theme-toggle.tsx
apps/client/src/hooks/: use-image-selection.ts  use-spatial-navigation.ts
db/scylla/: init.cql
(+34 files in other folders)
