[workspace]
resolver = "3"
members = [
  "packages/entity",
  "packages/shared",
  "packages/migration",
  "apps/api",
  "apps/client/src-tauri",
]

[workspace.dependencies]
sea-orm = { version = "2.0.0-rc", features = [
  "sqlx-postgres",
  "runtime-tokio",
  "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }
tokio = { version = "1.52", features = ["full"] }
derive_more = { version = "2.1.1", features = ["display", "from_str", "into"] }
