[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../packages/shared" }
entity = { path = "../../packages/entity" }

uuid = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

axum = { version = "0.8", features = ["ws"] }
axum-client-ip = "1.3.1"
tower-http = { version = "0.6", features = ["cors"] }
webrtc = "0.17"
futures = "0.3"
futures-util = "0.3"
argon2 = "0.6.0-rc.8"
password-hash = "0.6.1"

scylla = { version = "1.6", features = ["chrono-04"] }
redis = { version = "1.0", features = ["tokio-comp"] }
deadpool-redis = "0.23"
aws-config = "1.8"
aws-sdk-s3 = "1.1"

dashmap = "7.0.0-rc2"
validator = "0.20"
dotenvy = "0.15"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
