[package]
name = "client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shared = { path = "../../../packages/shared" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = { version = "2.5.0", default-features = false, features = [
  "xdg-portal",
] }
tauri-plugin-fs = "2"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

image = "0.25"
webrtc = "0.17"
reqwest = { version = "0.13", features = ["json", "query"] }
url = "2.5.8"
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6.2.1"
thiserror = "2.0.18"
